Fix search bar focus trap and search result focus outline clipping (#1770)
This one was a bit tricky to get right. I also think the search
JS code needs some serious refactoring (that could lead to a non-
trivial perf improvement), but I'm not 100% sure of that yet.

Related to #1767.

--- a/_sass/search.scss
+++ b/_sass/search.scss
@@ -128,6 +128,7 @@
 .search-result {
   display: block;
   padding: $sp-1 $sp-3;
+  outline-offset: -1px;
 
   &:hover,
   &.active {
